# vast_hw

./: README.md  pyproject.toml  requirements.txt
docs/: Take_Home_Challenge.txt
examples/: example01.py
src/: simulator.py
tests/: test_simulator.py
