[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

